--- a/Styles/style.css
+++ b/Styles/style.css
@@ -688,43 +688,660 @@ footer {
 }
 /* Responsive Styles */
 @media (max-width: 960px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-        background-color: #333;
-    }
+    /* Basic Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    .nav-links.active {
-        display: flex;
-    }
+body {
+    font-family: Axiforma;
+}
 
-    .nav-toggler {
-        display: flex;
-    }
+/* Header Styles */
+header {
+    background-color: #FFF2DB;
+    color: #603F00;
+    font-family: sans-serif;
+    border-radius: 40px;
+    margin: 30px;
+}
 
-    .nav-links li {
-        margin: 0.5em 0;
-    }
+nav {
+    gap: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 30px;
+}
 
-    .hero {
-        padding: 3em 1em;
-    }
+.logo{
+    display: flex;
+    gap: 9px;
+    justify-content: space-between;
+}
+.logo p{
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: left;
+    margin-top: 10px;
+}
 
-    main {
-        padding: 1em;
-    }
+.nav-toggler {
+    flex-direction: column;
+    justify-content: space-around;
+    width: 30px;
+    height: 21px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    z-index: 10;
+    color: #603F00;
+}
 
-    .nav-toggler.active .bar:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
-    }
+.nav-toggler .bar {
+    width: 100%;
+    height: 3px;
+    background-color: #603F00;
+}
 
-    .nav-toggler.active .bar:nth-child(2) {
-        opacity: 0;
-    }
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 4em;
+    margin-top: 10px;
+}
 
-    .nav-toggler.active .bar:nth-child(3) {
-        transform: rotate(-45deg) translate(5px, -5px);
-    }
+.nav-links li {
+    margin: 0;
+}
+
+.nav-links a {
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #333333;
+}
+.nav-item {
+    display: none;
+}
+.nav-contact{
+    display: none;
+    border-radius: 73px;
+    width: Hug (148px)px;
+    height: Hug (52px)px;
+    padding: 12px 32px 12px 32px;
+    line-height: 24px;
+    font-size: 14px;
+    opacity: 0px;
+    background-color: #FFFFFF;
+}
+.nav-contact a {
+    text-decoration: none;
+    color: #333333;
+}
+
+
+/* Welcome */
+.welcome{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 50px;
+}
+.welcome .greeting a{
+    width: Hug (215px)px;
+    height: Fixed (64px)px;
+    padding: 24px 56px 24px 56px;
+    gap: 10px;
+    border-radius: 73px;
+    opacity: 0px;
+    background-color: #925F01;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 29.61px;
+    text-align: center;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.greeting h1 {
+    font-size: 32px;
+}
+.greeting p {
+    font-size: 20px;
+}
+.container{
+    background-color: #fce0c6;
+    display: none;
+    rotate: 4.37 deg;
+    border-radius: 40px;
+    height: 534px;
+    width: 534px;
+    margin: 50px 100px 0 50px;
+}
+.container img{
+    position: relative;
+    bottom: 50px;
+}
+/* Hero Section */
+.hero {
+    background: url('path/to/hero-image.jpg') no-repeat center center/cover;
+    color: #fff;
+    text-align: center;
+    padding: 5em 1em;
+}
+.jane{
+    width: 253px;
+    height: 81px;
+    top: 89px;
+    padding: 12px 20px 12px 20px;
+    gap: 17px;
+    position: relative;
+    top: -600px;
+    left: -100px;
+    border-radius: 19px;
+    background-color: #FFFFFF;
+}
+.courses{
+    width: 150px;
+    height: 78px;
+    padding: 22px 20px 22px 20px;
+    border-radius: 21px;
+    background-color: #FFFFFF;
+    position: relative;
+    top: -520px;
+    left: 480px;
+}
+.dedication{
+    width: 252px;
+    height: 110px;
+    padding: 22px 20px 22px 20px;
+    gap: 8px;
+    border-radius: 29px;
+    position: relative;
+    top: -300px;
+    left: 150px;
+    background-color: #FFFFFF;
+}
+.dedication-img{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    position: relative;
+    top: 45px;
+}
+.ded-1{
+    height: 48px;
+    width: 48px;
+    border-radius: 40px;
+}
+.ded-2{
+    height: 48px;
+    width: 48px;
+    border-radius: 40px;
+    position: relative;
+    left: -10px;
+}
+.ded-3{
+    height: 48px;
+    width: 48px;
+    border-radius: 40px;
+    position: relative;
+    left: -20px;
+}
+.ded-4{
+    height: 48px;
+    width: 48px;
+    border-radius: 40px;
+    position: relative;
+    left: -30px;
+}
+.dedication p {
+    font-size: 12px;
+    color: #666680;
+    margin-top: 6px;
+}
+.likes{
+    width: 62px;
+    height: 44px;
+    border-radius: 32px;
+    background-color: #E8E8F6;
+    position: relative;
+    top: -70px;
+    left: 165px;
+    display: flex;
+    justify-content: center;
+    padding: 7px;
+}
+.likes p{
+    color: #925F01;
+    font-size: 14px;
+}
+.jane{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 25px;
+}
+.jane-img{
+    margin-top: 40px;
+}
+.jane-img img{
+    border-radius: 40px;
+}
+.cooper h5{
+    font-size: 14px;
+    color: #333333;
+}
+.cooper p{
+    font-size: 12px;
+    color: #666680;
+}
+.courses h5{
+    color: #925F01;
+    font-size: 18px;
+}
+.courses p{
+    color: #666680;
+    font-size: 12px;
+}
+/* Main Content */
+
+
+
+/* Objective Content */
+.objective{
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    margin: 0px;
+    gap: 20px;
+}
+
+.mission {
+    width: 490px;
+    height: 300px;
+    padding: 24px;
+    border-radius: 16px;
+}
+.mission h1{
+    font-size: 56px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.mission p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 32px;
+    text-align: left;
+}
+.vision{
+    width: 490px;
+    height: 264px;
+    padding: 24px;
+    border-radius: 16px;
+}
+.vision h1{
+    font-size: 56px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.vision p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 32px;
+    text-align: left;    
+}
+/* Value Section */
+.value{
+    padding: 50px;
+}
+.value-head h5{
+    font-size: 18px;
+    color: #B0B0C0;
+}
+.value-head h2{
+    font-size: 48px;
+    color: #333333;
+    margin-bottom: 50px;
+}
+.value-body-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.value-body-1 .academics{
+    width: 370.670px;
+    height: 250px;
+}
+.value-body-1 img{
+    margin-bottom: 20px;
+}
+.value-body-1 h3{
+    font-size: 24px;
+    color: #333333;
+    margin-bottom: 15px;
+}
+.value-body-1 p {
+    font-size: 16px;
+    color: #666680;
+}
+.value-body-2 {
+    display: flex;
+    flex-direction: column;
+}
+.value-body-2 .academics{
+    width: 370.670px;
+    height: 250px;
+}
+.value-body-2 img{
+    margin-bottom: 20px;
+}
+.value-body-2 h3{
+    font-size: 24px;
+    color: #333333;
+    margin-bottom: 15px;
+}
+.value-body-2 p {
+    font-size: 16px;
+    color: #666680;
+}
+/* Key Person section */
+.person{
+    padding: 50px;
+}
+.person h5{
+    font-size: 18px;
+    color: #B0B0C0;
+    padding-bottom: 5px;
+}
+.arrow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+.arrow-section{
+    display: none;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 152px;
+    height: 56;
+}
+.left-arrow{
+    width: 56px;
+    height: 56px;
+    padding: 15.56px;
+    border-radius: 40px;
+    background-color: #9a9aa0;
+}
+.right-arrow{
+    width: 56px;
+    height: 56px;
+    padding: 15.56px;
+    border-radius: 40px;
+    background-color: #925F01;
+}
+.arrow h2{
+    font-size: 48px;
+    color: #333333;
+}
+.person-details{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.person-details img{
+    margin-bottom: 20px;
+    border-radius: 40px;
+}
+.person-details h4{
+    font-size: 24px;
+    color: #333333;
+    margin-bottom: 10px;
+}
+.person-details p{
+    font-size: 18px;
+    color: #666680;
+}
+/* More Info Section */
+.info{
+    padding: 50px;
+}
+.info-head{
+    margin-bottom: 30px;
+}
+.info-head p {
+    font-size: 18px;
+    color: #B0B0C0;
+}
+.info-head h1{
+    font-size: 48px;
+    color: #333333;
+}
+.info-body{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+.info-img img{
+    border-radius: 40px;
+}
+.faq{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.admission{
+    width: 502px;
+    height: 200px;
+    padding: 36px 24px 36px 24px;
+    border-radius: 40px;
+}
+.admission h5{
+    color: #FFFFFF;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.admission p{
+    color: #FFFFFF;
+    font-size: 18px;
+}
+/* .admission span{
+    margin-left: 16px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+} */
+.apply{
+    width: 502px;
+    height: 70px;
+    padding: 24px 32px 24px 32px;
+    border-radius: 40px;
+}
+.apply h5{
+    color: #333333;
+    font-size: 16px;
+}
+/* Moment At IAC Section */
+.moment{
+    padding: 50px;
+}
+.moment-head{
+    display: flex;
+    flex-direction: column;
+}
+.life p{
+    font-size: 18px;
+    color: #B0B0C0;
+    margin-bottom: 5px;
+}
+.life h1{
+    color: #333333;
+    font-size: 48px;
+}
+.ig a img{
+    width: 64px;
+    height: 64px;
+    border-radius: 40px;
+    background-color: #0f0f0f;
+    color: #FFFFFF;
+}
+.ig a{
+    flex-direction: row;
+    text-decoration: none;
+}
+.ig a i {
+    color: #2F2F2F;
+}
+.moment-body{
+    margin-top: 30px;
+    padding: 20px 20px 0 20px;
+}
+.moment-body-1{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+    gap: 20px;
+    padding: 50px;
+} 
+.moment-body-2{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 5px;
+} 
+.moment-social{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.moment-social .more{
+    width: 95px;
+    height: 36px;
+    padding: 8px 16px 8px 16px;
+    border-radius: 28px;
+    background-color: #333333;
+    display: flex;
+    justify-content: center;
+    color: #FFFFFF;
+    font-size: 13px;
+    text-decoration: none;
+}
+.moment-social .follow{
+    width: 170.13px;
+    height:  36px;
+    padding: 8px 16px 8px 16px;
+    gap: 8px;
+    border-radius: 24px;
+    background-color: #408BD1;
+    color: #FFFFFF;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    text-decoration: none;
+}
+
+/* Location Content */
+.location{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 50px;
+}
+.location-address{
+    margin-top: 90px;
+}
+.location-head{
+    color: #333333;
+    font-size: 40px;
+}
+.location-body{
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #925F01;
+}
+.iac{
+    color: #925F01;
+    font-size: 18px;
+}
+iframe {
+    border-radius: 40px;
+    width: 202;
+    height: 443px;
+}
+/* Footer */
+footer {
+    width: 342px;
+    height: 822px;
+    border-radius: 40px;
+    background-color: #FFF2DB;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+}
+.address{
+    color: #603F00;
+    font-size: 16px;
+}
+.btn-logo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+.btn-logo p {
+    margin-top: 15px;
+}
+.address-details {
+    margin-top: 10px;
+}
+.address-details ul li {
+    color: #837966;
+    list-style: none;
+    padding: 5px;
+}
+.company p{
+    font-size: 16px;
+    color: #333333;
+    margin-bottom: 20px;
+}
+.company ul li{
+    color: #837966;
+    font-size: 14px;
+    padding: 5px 5px 5px 0;
+    list-style: none;
+}
+.product p{
+    font-size: 16px;
+    color: #333333;
+    margin-bottom: 20px;
+}
+.product ul li{
+    color: #837966;
+    font-size: 14px;
+    padding: 5px 5px 5px 0;
+    list-style: none;
+}
+.legal p{
+    font-size: 16px;
+    color: #333333;
+    margin-bottom: 20px;
+}
+.legal ul li{
+    color: #837966;
+    font-size: 14px;
+    padding: 5px 5px 5px 0;
+    list-style: none;
+}
+.social ul li {
+    color: #837966;
+    list-style: none;
+}
 }
