--- a/Styles/style.css
+++ b/Styles/style.css
@@ -693,6 +693,7 @@ footer {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    align-items: center;
 }
 
 body {
@@ -793,6 +794,9 @@ nav {
     gap: 20px;
     margin-top: 50px;
 }
+.greeting{
+    
+}
 .welcome .greeting a{
     width: Hug (215px)px;
     height: Fixed (64px)px;
@@ -808,32 +812,33 @@ nav {
     text-decoration: none;
     color: #FFFFFF;
 }
-.greeting h1 {
+.greeting .h1 {
     font-size: 32px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -0.02em;
+    text-align: left;
 }
 .greeting p {
     font-size: 20px;
 }
 .container{
     background-color: #fce0c6;
-    display: none;
     rotate: 4.37 deg;
     border-radius: 40px;
-    height: 534px;
-    width: 534px;
+    height: 334.9px;
+    width: 332px;
     margin: 50px 100px 0 50px;
 }
 .container img{
     position: relative;
     bottom: 50px;
+    width: 299.96px;
+    height: 274.72px;
+    gap: 0px;
+    opacity: 0px;
 }
 /* Hero Section */
-.hero {
-    background: url('path/to/hero-image.jpg') no-repeat center center/cover;
-    color: #fff;
-    text-align: center;
-    padding: 5em 1em;
-}
 .jane{
     width: 253px;
     height: 81px;
@@ -845,8 +850,10 @@ nav {
     left: -100px;
     border-radius: 19px;
     background-color: #FFFFFF;
+    display: none;
 }
 .courses{
+    display: none;
     width: 150px;
     height: 78px;
     padding: 22px 20px 22px 20px;
@@ -857,6 +864,7 @@ nav {
     left: 480px;
 }
 .dedication{
+    display: none;
     width: 252px;
     height: 110px;
     padding: 22px 20px 22px 20px;
@@ -963,8 +971,8 @@ nav {
 }
 
 .mission {
-    width: 490px;
-    height: 300px;
+    width: 342px;
+    height: 400px;
     padding: 24px;
     border-radius: 16px;
 }
@@ -980,7 +988,7 @@ nav {
     text-align: left;
 }
 .vision{
-    width: 490px;
+    width: 342px;
     height: 264px;
     padding: 24px;
     border-radius: 16px;
@@ -1087,7 +1095,7 @@ nav {
     background-color: #925F01;
 }
 .arrow h2{
-    font-size: 48px;
+    font-size: 24px;
     color: #333333;
 }
 .person-details{
@@ -1120,7 +1128,7 @@ nav {
     color: #B0B0C0;
 }
 .info-head h1{
-    font-size: 48px;
+    font-size: 24px;
     color: #333333;
 }
 .info-body{
@@ -1130,6 +1138,7 @@ nav {
 }
 .info-img img{
     border-radius: 40px;
+    width: 342px;
 }
 .faq{
     display: flex;
@@ -1137,7 +1146,7 @@ nav {
     gap: 20px;
 }
 .admission{
-    width: 502px;
+    width: 342px;
     height: 200px;
     padding: 36px 24px 36px 24px;
     border-radius: 40px;
@@ -1157,7 +1166,7 @@ nav {
     background-color: #FFFFFF;
 } */
 .apply{
-    width: 502px;
+    width: 342px;
     height: 70px;
     padding: 24px 32px 24px 32px;
     border-radius: 40px;
@@ -1167,12 +1176,11 @@ nav {
     font-size: 16px;
 }
 /* Moment At IAC Section */
-.moment{
-    padding: 50px;
-}
 .moment-head{
     display: flex;
     flex-direction: column;
+    align-items: start;
+    margin-bottom: 0;
 }
 .life p{
     font-size: 18px;
@@ -1181,11 +1189,12 @@ nav {
 }
 .life h1{
     color: #333333;
-    font-size: 48px;
+    font-size: 24px;
+    margin-bottom: 5px;
 }
 .ig a img{
-    width: 64px;
-    height: 64px;
+    width: 44px;
+    height: 44px;
     border-radius: 40px;
     background-color: #0f0f0f;
     color: #FFFFFF;
@@ -1196,9 +1205,10 @@ nav {
 }
 .ig a i {
     color: #2F2F2F;
+    margin-top: 0px;
 }
 .moment-body{
-    margin-top: 30px;
+    margin-top: -20px;
     padding: 20px 20px 0 20px;
 }
 .moment-body-1{
@@ -1256,7 +1266,8 @@ nav {
     padding: 50px;
 }
 .location-address{
-    margin-top: 90px;
+    margin-top: 0px;
+    text-align: center;
 }
 .location-head{
     color: #333333;
@@ -1273,7 +1284,7 @@ nav {
 }
 iframe {
     border-radius: 40px;
-    width: 202;
+    width: 342px;
     height: 443px;
 }
 /* Footer */
@@ -1284,7 +1295,6 @@ footer {
     background-color: #FFF2DB;
     display: flex;
     flex-direction: column;
-    padding: 50px;
 }
 .address{
     color: #603F00;
