--- a/Styles/style.css
+++ b/Styles/style.css
@@ -697,7 +697,7 @@ footer {
     /* Basic Reset */
 * {
     margin: 0;
-    padding: 0;
+    padding: 5px;
     box-sizing: border-box;
     align-items: center;
 }
