--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,7 +8,7 @@ body {
     font-family: Axiforma, sans-serif;
 }
 
-header {
+.header {
     background-color: #FFF2DB;
     color: #603F00;
     font-family: sans-serif;
