--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,7 +13,7 @@ body {
     color: #603F00;
     font-family: sans-serif;
     border-radius: 40px;
-    margin: 10px;
+    margin-left: 20px;
 }
 .nav-btn{
     border-radius: 40px;
